[project]
name = "comfyui-tile-calculator"
version = "1.0.0"
description = "ComfyUI custom node for calculating tile dimensions in upscaling workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["comfyui", "image", "upscale", "tiles"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/jchiotaka/comfyui-tile-calculator"

[tool.comfy]
PublisherId = "ioanimal"
DisplayName = "Tile Calculator"
